# GradeLens

./: .gitignore  README.md
GradeLens-Backend/: pyproject.toml  requirements.txt
GradeLens-Backend/apps/accounts/: views.py
GradeLens-Backend/apps/accounts/grader_utils/: execute_grader.py  grader.py
GradeLens-Backend/config/: settings.py
GradeLens-RAG-Development/: get_content_from_app_prop.py  grader_2.0.ipynb  grader_py_scorer.py  grader_rag_deva.ipynb  grader_rag_pi_score.ipynb  grader_rag_srinivasan.ipynb  llms.py  newgrader.ipynb  testing.py
GradeLens-RAG-Development/Srinivasan/tldrs/: approach5.tldr
GradeLens-RAG-Development/data/: rubric.csv
GradeLens-RAG-Development/data/outputs/old/claude/student_answer_correct_a/: grader_output_temperature-0.5_topPValues-0.5_maxTokens-2000.txt
GradeLens-RAG-Development/data/outputs/old/gpt/student_answer_correct_a/: grader_output_temperature-0.5_topPValues-0.5_maxTokens-2000.txt
GradeLens-RAG-Development/data/outputs/old/student_answer_correct_b/lenient_evaluation/gpt/: result_0.txt  result_1.txt  (+3 more)
GradeLens-RAG-Development/data/outputs/pi_scores/: scoring_forstudent_answer_correct_a.csv  viz.pbix
GradeLens-RAG-Development/grader_agno/: FeedbackAgent.py  execute_grader.py  generate_ruberics.py  get_context.py  grade_students.ipynb  grader.py  run.py  student_answer_sheet_formater.py
GradeLens-RAG-Development/grader_agno/Models/: AssessmentQuestion.py  Courses.py  Exam.py  Student.py
GradeLens-RAG-Development/tldrs/: approach1.tldr  approach2.tldr  approach3.tldr  approach4.tldr  approach5.tldr
(+185 files in other folders)
